fixed adding and getting all patients

--- a/Medana.API/Properties/launchSettings.json
+++ b/Medana.API/Properties/launchSettings.json
@@ -34,8 +34,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "DatabaseConnectionString": ""
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
