--- a/Medana.API/appsettings.json
+++ b/Medana.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnectionString": "Server=tcp:dbservermedana.database.windows.net,1433;Initial Catalog=medana_db;Persist Security Info=False;User ID=MedanaAdmin;Password=Parola123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+  }
 }
