--- a/Medana.Web/Medana.Web.csproj
+++ b/Medana.Web/Medana.Web.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="bootstrap" Version="5.3.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Medana.API\Medana.API.csproj" />
   </ItemGroup>
 
