--- a/Medana.Web/Medana.Web.csproj
+++ b/Medana.Web/Medana.Web.csproj
@@ -1,14 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="bootstrap" Version="5.3.2" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Medana.API\Medana.API.csproj" />
