Added Update functionality and made the backend work

--- a/Medana.Web/Properties/launchSettings.json
+++ b/Medana.Web/Properties/launchSettings.json
@@ -31,7 +31,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "MedanaApiUrl": "http://localhost:5047"
+        "MedanaApiUrl": "https://localhost:44355"
       }
     }
   }
