--- a/Medana.Web/Medana.Web.csproj
+++ b/Medana.Web/Medana.Web.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
+    <PackageReference Include="PuppeteerSharp" Version="14.1.*" />
   </ItemGroup>
 
   <ItemGroup>
